<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <CheckBox
        android:id="@+id/checkBoxIdea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editDescription"
        android:layout_marginTop="35dp"
        android:text="@string/idea_checkbox" />

    <CheckBox
        android:id="@+id/checkBoxTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBoxIdea"
        android:layout_marginTop="35dp"
        android:text="@string/todo_checkbox" />

    <CheckBox
        android:id="@+id/checkBoxImportant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBoxTodo"
        android:layout_marginTop="35dp"
        android:text="@string/important_checkbox" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/checkBoxImportant"
        android:layout_marginStart="50dp"
        android:layout_marginTop="53dp"
        android:text="@string/cancel_button" />

    <Button
        android:id="@+id/btnOk"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_marginEnd="50dp"
        android:text="@string/ok_button" />

</RelativeLayout>